General: Complete refactoring.

--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -1,4 +1,4 @@
-{%- assign include_nav = site.data.nav.includes | where: "title", include.title | first %}
+{%- assign include_nav = site.data.nav.includes | where: "title", include.title | first -%}
 
 <div class="tab-main">
 
