--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -18,7 +18,7 @@
 
   {%- for tab in include_nav.tabs -%}
     <div class="tab-content tab-content--{{ forloop.index }}">
-      {%- capture content %}{% include {{ tab.path }} %}{% endcapture -%}
+      {%- capture content %}{% include {{ tab.path }} %}{% endcapture %}
       {{ content | markdownify }}
     </div>
   {%- endfor -%}
